chore: 更新文件作者信息，添加作者邮箱及创建时间，优化代码注释